[gd_scene load_steps=2 format=3 uid="uid://bnj4dtaomd87b"]

[ext_resource type="Script" uid="uid://bhhyaitdj8l5q" path="res://scene/battle/battle_gui.gd" id="1_36qm5"]

[node name="BattleGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_36qm5")

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ActionButtons" type="Control" parent="Buttons"]
visible = false
anchors_preset = 0
offset_left = 33.0
offset_top = 45.0
offset_right = 385.0
offset_bottom = 85.0

[node name="Attack" type="Button" parent="Buttons/ActionButtons"]
layout_mode = 0
offset_left = -33.0
offset_top = -45.0
offset_right = 25.0
offset_bottom = -14.0
text = "Attack"

[node name="Shoot" type="Button" parent="Buttons/ActionButtons"]
layout_mode = 0
offset_left = -33.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 17.0
text = "Shoot"

[node name="Defend" type="Button" parent="Buttons/ActionButtons"]
layout_mode = 0
offset_left = -33.0
offset_top = 17.0
offset_right = 32.0
offset_bottom = 48.0
text = "Defend"

[node name="Bag" type="Button" parent="Buttons/ActionButtons"]
layout_mode = 0
offset_left = -33.0
offset_top = 79.0
offset_right = 4.0
offset_bottom = 110.0
text = "Bag"

[node name="Wait" type="Button" parent="Buttons/ActionButtons"]
layout_mode = 0
offset_left = -33.0
offset_top = 48.0
offset_right = 11.0
offset_bottom = 79.0
text = "Wait"

[node name="SpecialButtons" type="Control" parent="Buttons"]
visible = false
anchors_preset = 0
offset_left = 87.0
offset_top = 223.0
offset_right = 127.0
offset_bottom = 263.0

[node name="BagButtons" type="Control" parent="Buttons"]
visible = false
anchors_preset = 0
offset_left = 214.0
offset_top = 154.0
offset_right = 254.0
offset_bottom = 194.0

[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
